# encrypted_file_server

./: .dockerignore  .envrc  .gitignore  .gitmodules  .keys.json  Cargo.toml  Dockerfile  README.md  data.db  flake.nix  fly.toml
.cargo/: config.toml
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link  flake-profile-4-link
.github/workflows/: rust.yml  windows_test.yml
.sqlx/: query-794284f4d0baa1904aa3e6da10f84bb9682e1e9ed1d72c89c2e4d6a9066f4f9e.json  query-e5c9fe5d80662319b22480aa53e6c361c33aa8a71f128149f79a9df7d90c8f1a.json  query-edbf4dc284e12c929251d0ac0491ebd283f7d40ccf1b7ac8cf79108aabd66122.json
auth/: Cargo.toml  Dockerfile  flake.nix
auth/migrations/: 20231025032307_create_users.sql
auth/src/: main.rs
bfsp/: Cargo.toml  build.rs
bfsp/src/: auth.rs  bfsp.proto  cli.rs  crypto.rs  file.rs  lib.rs  test.rs
certs/: localhost-key.pem  localhost.pem  rootCA.pem
cli/: .gitignore  Cargo.toml  flake.nix
cli/.cargo/: config.toml
cli/.sqlx/: query-0f8986b6e007bd919a4e0c1695be322dc8e513c2477c5c485557abf42132ed90.json  query-120595aaef9c8b95c552dfecad8f01ff396b75789dd8549d8b034343a5d90110.json  query-1f25ee2d22351e26c2d82e4f67d898a2feee638f6ac6c40fbdb8cd585d67ac1c.json  query-392c5e533ba1c22d4067839bec16ca630eadbfd0aa0905400ac927115863af3c.json  query-3a7d5ada427caa9535e4cd7e7ac0b4065abb13047308395de87dc1255c9e799a.json  query-46d8bba45723576aef83026b2a4493187dad72a8cd5da6495070254985507c69.json  query-508f7a207e1d454d5bff1813f0c01d6870f8d10c7eb66590ffc23ca9798742b7.json  query-74bd58b016f88b5fbafbc9af6fbbbd6f7a50e7b81f0935cd85a9c8f5d939df3d.json  query-9f035ef640f878816dc3a89d0e8abfafb74da77f3f02f81fdda819041e0a4cca.json  query-a92f90e82b86bc57b42411d7f51a862e07dbc11f367c0b6955e911119bdc660d.json  query-e2e28afeea514252646fe23f211e477b8beca44fcb46fb98d1e2751c24ac29c7.json  query-e998823098cca1e20cc8a6bc8c69cb99f5f348e1e84e687ee0018c79d0402867.json  query-f2c7fa3d6eac061360cf7ea89295904859a97abe9337cdfcca183ff0ec0f4bfd.json
cli/migrations/: 20230810233647_create_file_header.sql  20230811151656_create_chunks_table.sql  20231006201309_store_enc_key.sql  20231013033720_create_keys.sql
cli/src/: crypto.rs  main.rs
fs/: Cargo.toml
fs/src/: db.rs  main.rs
migrations/: 20230723164116_add_auth.sql  20231018041636_chunks.sql  20240306015917_create_file_meta_table.sql  20240421203437_tls_certs.sql  20240531213904_storage_caps.sql  20240817205629_enc_chunk_meta.sql  20240818052859_better_primary_key.sql  20240820043457_suspend_users.sql  20240824233210_queued_actions.sql
scripts/: generate  localhost.hex
src/: action.rs  auth.rs  db.rs  internal.rs  main.rs  meta_db.rs  tls.rs  tokens.rs
src/chunk_db/: file.rs  mod.rs  s3.rs
