[package]
name = "file_server"
version = "0.1.0"
edition = "2021"

[profile.release]
# TODO re-enable this when we don't do 50 deploys a day
#lto = "fat"

[dependencies]
anyhow = { version = "1" }
tokio = { version = "1", features = [
  "fs",
  "macros",
  "io-util",
  "rt-multi-thread",
] }
log = { version = "0.4" }
fern = { version = "0.6", features = ["colored"] }
humantime = "2"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
rand = "0.8"
wtransport = { version = "0.1" }
#bfsp = { path = "../bfsp" }
bfsp = { git = "https://github.com/Billy-s-E2EE-File-Server/bfsp.git" }
futures = { version = "0.3", features = ["executor"] }
thiserror = "1"
biscuit-auth = { version = "4" }

# TLS cert stuff
instant-acme = "0.4"
rcgen = "0.12.1"
warp = "0.3"
serde_json = "1"
