[package]
name = "file_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1" }
tokio = { version = "1", features = [
  "fs",
  "macros",
  "io-util",
  "rt-multi-thread",
] }
humantime = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls", "time"] }
rand = "0.8"
wtransport = { version = "0.1" }
#bfsp = { path = "../bfsp" }
bfsp = { git = "https://github.com/Billy-s-E2EE-File-Server/bfsp.git" }
futures = { version = "0.3", features = ["executor"] }
thiserror = "1"
biscuit-auth = { version = "5" }
rust-s3 = { version = "0.34", optional = true }

# tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry-otlp = { version = "0.15.0", features = ["http-proto", "reqwest", "reqwest-client", "reqwest-rustls", "trace", "tokio"] }
opentelemetry = "0.22"
reqwest = { version = "0.11", features = ["json"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "trace"] }
tracing-opentelemetry = "0.23"

# TLS cert stuff
instant-acme = "0.4"
rcgen = "0.12"
warp = "0.3"
serde = "1"
serde_json = { version = "1", features = ["raw_value"] }
bytes = "1"
hex = "0.4"

[features]
s3 = ["rust-s3"]
prod = ["s3"]
