[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.6.20"
rand = "0.8"
serde_derive = "1.0.189"
serde_json = "1.0.107"
tokio = { version = "1", features = ["net", "io-util", "macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
serde = "1.0.189"
axum-macros = "0.3.8"
argon2 = "0.5.2"
macaroon = "0.3.0"
