[package]
name = "bfsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = { version = "0.7", features = ["validation"] }
blake3 = { version = "1", features = ["rayon"] }
anyhow = { version = "1" }
tokio = { version = "1", features = ["fs", "io-util"] }
sqlx = { version = "0.7.1", default-features = false }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
faster-hex = "0.8"
