[package]
name = "cli_enc"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
bfsp = { path = "../bfsp" }
fern = "0.6"
humantime = "2"
log = "0.4"
rkyv = "0.7"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
directories-next = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"
