[package]
name = "cli_enc"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
bfsp = { path = "../bfsp" }
humantime = "2"
fern = "0.6"
log = "0.4"
rkyv = "0.7"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
